--- a/capstone_project1/Data_Cleaning_and_Wrangling.ipynb
+++ b/capstone_project1/Data_Cleaning_and_Wrangling.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "##Data Cleaning and Wrangling\n",
     "\n",
-    "In this notebook, we will clean up "
+    "In this notebook, we will examine the dataset for any empty fields and missing data, then drop unnecessary columns and fix the missing fields "
    ]
   },
   {
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "#Trial data loading and handling\n",
+    "#Import necessary packages and display parameters\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -7069,6 +7069,8 @@
     }
    ],
    "source": [
+    "#By examining the raw METAR both columns ' drct' and ' sknt' are missing are because those are not reported in the METAR\n",
+    "\n",
     "df_merged[(df_merged[' drct'] == 'M') & (df_merged[' sknt'] == 'M')][' metar']"
    ]
   },
@@ -21555,6 +21557,8 @@
     }
    ],
    "source": [
+    "#Check for rows that ' drct' is having value 'M' that is VRB wind, we will later change it to 999.\n",
+    "\n",
     "df_merged[df_merged[' drct'] == 'M']"
    ]
   },
@@ -27530,7 +27534,7 @@
    },
    "outputs": [],
    "source": [
-    "#Move IsDelay column to the back\n",
+    "#Move IsDelay column which will be the target column to the back\n",
     "\n",
     "cols = list(df_merged.columns.values) #Make a list of all of the columns in the df\n",
     "cols.pop(cols.index('IsDelay')) #Remove IsDelay from list\n",
