--- a/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
+++ b/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
@@ -538,6 +538,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   4. Discuss statistical significance and practical significance. Do they differ here? How does this change your recommendation to the client?\n",
+    "   5. Look at the scatterplot above. \n",
+    "      - What are the advantages and disadvantages of using this plot to convey information?\n",
+    "      \n",
+    "      The chart above displays all data in one chart including some empty fields which distorted the whole picture.\n",
+    "      \n",
+    "      - Construct another plot that conveys the same information in a more direct manner.\n",
+    "      \n",
+    "      The chart below displays clean up data and show the negative correlation between number of discharges and readmission ratio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
