--- a/capstone_project1/models/Random_Forest_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/Random_Forest_Model_GridSearchCV.ipynb
@@ -1018,12 +1018,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.8028553843616233\n",
+      "AUC scores computed using 5-fold cross-validation: [ 0.79393363  0.79680299  0.7931612   0.79421361  0.79432028]\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest = RandomForestClassifier(n_estimators=500)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y, random_state=0)\n",
+    "\n",
+    "forest.fit(X_train, y_train)\n",
+    "\n",
+    "# Compute predicted probabilities: y_pred_prob\n",
+    "y_pred_prob = forest.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "# Compute and print AUC score\n",
+    "print(\"AUC: {}\".format(roc_auc_score(y_test, y_pred_prob)))\n",
+    "\n",
+    "# Compute cross-validated AUC scores: cv_auc\n",
+    "cv_auc = cross_val_score(forest, X_train, y_train, cv=5, scoring='roc_auc')\n",
+    "\n",
+    "# Print list of AUC scores\n",
+    "print(\"AUC scores computed using 5-fold cross-validation: {}\".format(cv_auc))"
+   ]
   },
   {
    "cell_type": "code",
