--- a/capstone_project1/models/kNearest_Neighbors_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/kNearest_Neighbors_Model_GridSearchCV.ipynb
@@ -995,6 +995,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "%matplotlib inline\n",
     "\n",
     "\n",
@@ -1021,11 +1022,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.669089626530898\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=2)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y, random_state=0)\n",
+    "\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Compute predicted probabilies: y_pred_prob\n",
+    "y_pred_prob = knn.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "# Compute and print AUC score\n",
+    "print('AUC: {}'.format(roc_auc_score(y_test, y_pred_prob)))\n",
+    "\n",
+    "# Compute cross-validated AUC scores: cv_auc\n",
+    "cv_auc = cross_val_score(knn, X_train, y_train, cv=5, scoring='roc_auc')\n",
+    "\n",
+    "# print list of AUC scores\n",
+    "print('AUC scores computer using 5-fold cross-validation: {}'.format(cv_auc))"
+   ]
   },
   {
    "cell_type": "code",
