--- a/capstone_project1/models/Random_Forest_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/Random_Forest_Model_GridSearchCV.ipynb
@@ -1052,12 +1052,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique predict labals: [0]\n",
+      "Test score: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dummy_majority = DummyClassifier(strategy='most_frequent').fit(X_train, y_train)\n",
+    "pred_most_frequent = dummy_majority.predict(X_test)\n",
+    "print('Unique predict labals: {}'.format(np.unique(pred_most_frequent)))\n",
+    "print('Test score: {:.2f}'.format(dummy_majority.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[196483  12772]\n",
+      " [ 38335  28822]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "pred_forest = forest.predict(X_test)\n",
+    "\n",
+    "confusion = confusion_matrix(y_test, pred_forest)\n",
+    "print('Confusion matrix:\\n{}'.format(confusion))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics for prediction with Dummy Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  Not Delay       0.76      0.76      0.76    209255\n",
+      "      Delay       0.24      0.24      0.24     67157\n",
+      "\n",
+      "avg / total       0.63      0.63      0.63    276412\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "dummy = DummyClassifier().fit(X_train, y_train)\n",
+    "pred_dummy = dummy.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, pred_dummy,\n",
+    "                           target_names=['Not Delay',' Delay']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics for prediction with Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  Not Delay       0.84      0.94      0.88    209255\n",
+      "      Delay       0.69      0.43      0.53     67157\n",
+      "\n",
+      "avg / total       0.80      0.82      0.80    276412\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pred_forest,\n",
+    "                           target_names=['Not Delay',' Delay']))"
+   ]
   },
   {
    "cell_type": "code",
