--- a/capstone_project1/models/Logistic_Regression_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/Logistic_Regression_Model_GridSearchCV.ipynb
@@ -408,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -989,7 +991,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1094,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1115,6 +1119,7 @@
     "\n",
     "# Compute predicted probabilities: y_pred_prob\n",
     "y_pred_prob = logreg.predict_proba(X_test)[:,1]\n",
+    "pred_logreg = logreg.predict(X_test)\n",
     "\n",
     "# Compute and print AUC score\n",
     "print(\"AUC: {}\".format(roc_auc_score(y_test, y_pred_prob)))\n",
@@ -1124,6 +1129,150 @@
     "\n",
     "# Print list of AUC scores\n",
     "print(\"AUC scores computed using 5-fold cross-validation: {}\".format(cv_auc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=11787686.347935867, class_weight=None, dual=False,\n",
+       "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
+       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique predicted labels: [0]\n",
+      "Test score: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "dummy_majority = DummyClassifier(strategy='most_frequent').fit(X_train, y_train)\n",
+    "pred_most_frequent = dummy_majority.predict(X_test)\n",
+    "print('Unique predicted labels: {}'.format(np.unique(pred_most_frequent)))\n",
+    "print('Test score: {:.2f}'.format(dummy_majority.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dummy score: 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy = DummyClassifier().fit(X_train, y_train)\n",
+    "pred_dummy = dummy.predict(X_test)\n",
+    "print('dummy score: {:.2f}'.format(dummy.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[205046   4209]\n",
+      " [ 61389   5768]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion = confusion_matrix(y_test, pred_logreg)\n",
+    "print('Confusion matrix:\\n{}'.format(confusion))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  Not Delay       0.76      1.00      0.86    209255\n",
+      "      Delay       0.00      0.00      0.00     67157\n",
+      "\n",
+      "avg / total       0.57      0.76      0.65    276412\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  Not Delay       0.76      0.76      0.76    209255\n",
+      "      Delay       0.24      0.24      0.24     67157\n",
+      "\n",
+      "avg / total       0.63      0.63      0.63    276412\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  Not Delay       0.77      0.98      0.86    209255\n",
+      "      Delay       0.58      0.09      0.15     67157\n",
+      "\n",
+      "avg / total       0.72      0.76      0.69    276412\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, pred_most_frequent,\n",
+    "                           target_names=['Not Delay','Delay']))\n",
+    "print(classification_report(y_test, pred_dummy,\n",
+    "                           target_names=['Not Delay','Delay']))\n",
+    "print(classification_report(y_test, pred_logreg,\n",
+    "                           target_names=['Not Delay','Delay']))"
    ]
   },
   {
