--- a/capstone_project1/models/SVM_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/SVM_Model_GridSearchCV.ipynb
@@ -4183,17 +4183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.503911123868976\n",
+      "AUC: 0.5039821539664118\n",
       "AUC scores computer using 5-fold cross-validation: [ 0.50245586  0.50262132  0.5011498   0.50234738  0.50203303]\n",
-      "CPU times: user 8h 34min 38s, sys: 1min 15s, total: 8h 35min 54s\n",
-      "Wall time: 21h 9min 11s\n"
+      "CPU times: user 9h 20min 27s, sys: 1min 43s, total: 9h 22min 10s\n",
+      "Wall time: 14h 6min 53s\n"
      ]
     }
    ],
@@ -4207,7 +4207,7 @@
     "svm.fit(X_train, y_train)\n",
     "\n",
     "# Compute predicted probabilies: y_pred_prob\n",
-    "y_pred_prob = svm.predict_proba(X_test)[:,1]\n",
+    "y_pred_prob = svm.decision_function(X_test)\n",
     "\n",
     "# Compute and print AUC score\n",
     "print('AUC: {}'.format(roc_auc_score(y_test, y_pred_prob)))\n",
