--- a/capstone_project1/models/Decision_Tree_Model_GridSearchCV.ipynb
+++ b/capstone_project1/models/Decision_Tree_Model_GridSearchCV.ipynb
@@ -4159,157 +4159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cuthlo/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned Gradient Boosting parameters: {'min_samples_leaf': 250}\n",
-      "Best score is 0.6777509637824692\n",
+      "Tuned Gradient Boosting parameters: {'min_samples_leaf': 300}\n",
+      "Best ROC AUC is 0.5720412855747857\n",
       "Best estimator is DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
       "            max_features=None, max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "            min_samples_leaf=250, min_samples_split=2,\n",
+      "            min_samples_leaf=300, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
-      "            splitter='best')\n",
-      "CV result is {'mean_fit_time': array([ 0.74880638,  0.65397167,  0.67821279,  0.57264986,  0.58101282,\n",
-      "        0.56044345,  0.63028941,  0.66705561,  0.55065269,  0.49197078,\n",
-      "        0.48263249,  0.48451538,  0.48083844,  0.4607388 ,  0.45217137,\n",
-      "        0.46127915,  0.45674357,  0.4630137 ,  0.46417837,  0.44874864,\n",
-      "        0.42469358]), 'std_fit_time': array([ 0.0312311 ,  0.00659492,  0.10542355,  0.00954482,  0.03424073,\n",
-      "        0.03705503,  0.08111506,  0.06819724,  0.06559608,  0.01819772,\n",
-      "        0.01473379,  0.02895173,  0.03507083,  0.02525225,  0.02860478,\n",
-      "        0.04466589,  0.06684726,  0.05847064,  0.05355981,  0.03566143,\n",
-      "        0.01685925]), 'mean_score_time': array([ 0.02020617,  0.01852193,  0.01823573,  0.01410103,  0.02104402,\n",
-      "        0.01891818,  0.01514978,  0.0155736 ,  0.01489544,  0.01550112,\n",
-      "        0.0177443 ,  0.01433883,  0.01420679,  0.01520309,  0.01771455,\n",
-      "        0.02085576,  0.02126265,  0.01585174,  0.01995201,  0.02028718,\n",
-      "        0.01524644]), 'std_score_time': array([ 0.00480434,  0.00212789,  0.0038198 ,  0.00165727,  0.0093316 ,\n",
-      "        0.00628541,  0.00265286,  0.00337016,  0.00264441,  0.00255864,\n",
-      "        0.00196648,  0.00153188,  0.00179128,  0.00142638,  0.00496079,\n",
-      "        0.00585905,  0.00666044,  0.00450008,  0.00091559,  0.00973792,\n",
-      "        0.00243631]), 'param_min_samples_leaf': masked_array(data = [50 100 150 200 250 300 350 400 450 500 550 600 650 700 750 800 850 900 950\n",
-      " 1000 1050],\n",
-      "             mask = [False False False False False False False False False False False False\n",
-      " False False False False False False False False False],\n",
-      "       fill_value = ?)\n",
-      ", 'params': [{'min_samples_leaf': 50}, {'min_samples_leaf': 100}, {'min_samples_leaf': 150}, {'min_samples_leaf': 200}, {'min_samples_leaf': 250}, {'min_samples_leaf': 300}, {'min_samples_leaf': 350}, {'min_samples_leaf': 400}, {'min_samples_leaf': 450}, {'min_samples_leaf': 500}, {'min_samples_leaf': 550}, {'min_samples_leaf': 600}, {'min_samples_leaf': 650}, {'min_samples_leaf': 700}, {'min_samples_leaf': 750}, {'min_samples_leaf': 800}, {'min_samples_leaf': 850}, {'min_samples_leaf': 900}, {'min_samples_leaf': 950}, {'min_samples_leaf': 1000}, {'min_samples_leaf': 1050}], 'split0_test_AUC': array([ 0.67207182,  0.68724227,  0.67920264,  0.68240796,  0.68244657,\n",
-      "        0.68541059,  0.6838993 ,  0.68676878,  0.68402234,  0.68196112,\n",
-      "        0.68369173,  0.68524622,  0.68591719,  0.68353412,  0.68158494,\n",
-      "        0.68006011,  0.68009766,  0.67913356,  0.67735667,  0.6760594 ,\n",
-      "        0.67595858]), 'split1_test_AUC': array([ 0.66369584,  0.66561015,  0.67514411,  0.67422335,  0.67706209,\n",
-      "        0.67271632,  0.67460579,  0.67466375,  0.67301616,  0.66916248,\n",
-      "        0.67060563,  0.67205557,  0.67229415,  0.67232029,  0.66907332,\n",
-      "        0.66883641,  0.66773099,  0.66467291,  0.6641234 ,  0.66394658,\n",
-      "        0.66417592]), 'split2_test_AUC': array([ 0.66678127,  0.67460469,  0.67723251,  0.67845471,  0.68137584,\n",
-      "        0.68197079,  0.67827528,  0.67488687,  0.67599877,  0.67564892,\n",
-      "        0.67554086,  0.67643519,  0.67602885,  0.67712846,  0.67465008,\n",
-      "        0.67435982,  0.67210149,  0.67100157,  0.67225951,  0.67118498,\n",
-      "        0.67101994]), 'split3_test_AUC': array([ 0.66645394,  0.67508935,  0.67723883,  0.67577054,  0.67450427,\n",
-      "        0.67525604,  0.67035704,  0.6703612 ,  0.66628472,  0.66409089,\n",
-      "        0.66811791,  0.66665519,  0.66628269,  0.66652974,  0.66895991,\n",
-      "        0.66456236,  0.6628189 ,  0.66162684,  0.66051438,  0.660479  ,\n",
-      "        0.66029374]), 'split4_test_AUC': array([ 0.67800392,  0.68293096,  0.67718508,  0.67785737,  0.67336496,\n",
-      "        0.67239239,  0.67555448,  0.67320387,  0.67184905,  0.67195389,\n",
-      "        0.67162495,  0.67104085,  0.67156122,  0.67101826,  0.67103532,\n",
-      "        0.66811555,  0.66789539,  0.6686352 ,  0.66855636,  0.66723157,\n",
-      "        0.66820729]), 'mean_test_AUC': array([ 0.6694011 ,  0.67709531,  0.67720063,  0.67774282,  0.67775096,\n",
-      "        0.67754946,  0.67653853,  0.6759771 ,  0.67423444,  0.67256364,\n",
-      "        0.67391641,  0.67428686,  0.67441707,  0.67410642,  0.67306086,\n",
-      "        0.67118708,  0.6701291 ,  0.66901417,  0.66856221,  0.66778046,\n",
-      "        0.66793122]), 'std_test_AUC': array([ 0.00508396,  0.00747208,  0.00128378,  0.00277711,  0.00361774,\n",
-      "        0.00522613,  0.00447468,  0.00563218,  0.00581877,  0.00602598,\n",
-      "        0.00544122,  0.00630054,  0.00653736,  0.00579913,  0.00473309,\n",
-      "        0.00543408,  0.00578697,  0.00599866,  0.0059243 ,  0.00544878,\n",
-      "        0.00541278]), 'rank_test_AUC': array([17,  5,  4,  2,  1,  3,  6,  7, 10, 14, 12,  9,  8, 11, 13, 15, 16,\n",
-      "       18, 19, 21, 20], dtype=int32), 'split0_train_AUC': array([ 0.78888523,  0.74978657,  0.73274539,  0.72020734,  0.71195489,\n",
-      "        0.70589303,  0.70139382,  0.69837796,  0.69352028,  0.69180372,\n",
-      "        0.68882689,  0.68822086,  0.68711965,  0.68391938,  0.68183125,\n",
-      "        0.67971092,  0.67828265,  0.67716828,  0.67644835,  0.67440857,\n",
-      "        0.67405227]), 'split1_train_AUC': array([ 0.78980907,  0.74976079,  0.73229201,  0.7223224 ,  0.71461343,\n",
-      "        0.7086587 ,  0.70469175,  0.70068195,  0.69835816,  0.69453732,\n",
-      "        0.69304307,  0.69178527,  0.69030203,  0.68821282,  0.68614933,\n",
-      "        0.68482754,  0.68197744,  0.67973762,  0.67846806,  0.67741739,\n",
-      "        0.6765531 ]), 'split2_train_AUC': array([ 0.78750156,  0.74845266,  0.73140611,  0.72108206,  0.71354447,\n",
-      "        0.70797636,  0.70243512,  0.69894697,  0.69519643,  0.69382039,\n",
-      "        0.69077477,  0.68957216,  0.68787726,  0.68618582,  0.68486658,\n",
-      "        0.68288667,  0.6806659 ,  0.67940125,  0.67820181,  0.67712704,\n",
-      "        0.67641497]), 'split3_train_AUC': array([ 0.78801733,  0.7491145 ,  0.73267991,  0.72283807,  0.71526841,\n",
-      "        0.70840314,  0.70409093,  0.70013424,  0.69688177,  0.69517812,\n",
-      "        0.69271866,  0.69119092,  0.68964631,  0.68907902,  0.68686528,\n",
-      "        0.6838236 ,  0.68215775,  0.68033761,  0.67901502,  0.67780671,\n",
-      "        0.67718364]), 'split4_train_AUC': array([ 0.78731929,  0.75023317,  0.73178009,  0.72046586,  0.71512021,\n",
-      "        0.70916236,  0.70397999,  0.69988247,  0.69617904,  0.69421728,\n",
-      "        0.69274466,  0.69212044,  0.6904697 ,  0.68769062,  0.68503282,\n",
-      "        0.68383068,  0.68180892,  0.68093224,  0.68054545,  0.67852986,\n",
-      "        0.67791196]), 'mean_train_AUC': array([ 0.7883065 ,  0.74946954,  0.7321807 ,  0.72138315,  0.71410028,\n",
-      "        0.70801872,  0.70331832,  0.69960472,  0.69602714,  0.69391137,\n",
-      "        0.69162161,  0.69057793,  0.68908299,  0.68701753,  0.68494905,\n",
-      "        0.68301588,  0.68097853,  0.6795154 ,  0.67853574,  0.67705792,\n",
-      "        0.67642319]), 'std_train_AUC': array([ 0.00092723,  0.00062106,  0.00051787,  0.00103088,  0.00123124,\n",
-      "        0.0011301 ,  0.00121695,  0.00083133,  0.00162244,  0.00114372,\n",
-      "        0.00161325,  0.00146834,  0.00134424,  0.00181228,  0.0017232 ,\n",
-      "        0.00176283,  0.00144523,  0.0012849 ,  0.00132227,  0.00140573,\n",
-      "        0.00129869]), 'split0_test_Accuracy': array([ 0.77091108,  0.78119596,  0.77782834,  0.78019478,  0.77791936,\n",
-      "        0.77901156,  0.77964868,  0.77946664,  0.78083189,  0.78001274,\n",
-      "        0.78001274,  0.78001274,  0.78028579,  0.78028579,  0.78028579,\n",
-      "        0.78019478,  0.78010376,  0.77755529,  0.77755529,  0.77755529,\n",
-      "        0.77755529]), 'split1_test_Accuracy': array([ 0.77327751,  0.77700919,  0.77846546,  0.77919359,  0.78019478,\n",
-      "        0.78092291,  0.78092291,  0.78101393,  0.78074088,  0.77855648,\n",
-      "        0.77755529,  0.77864749,  0.77892054,  0.77873851,  0.77737326,\n",
-      "        0.77737326,  0.77737326,  0.77737326,  0.77737326,  0.77864749,\n",
-      "        0.77837444]), 'split2_test_Accuracy': array([ 0.77191226,  0.77782834,  0.77691818,  0.78055884,  0.78055884,\n",
-      "        0.78119596,  0.78010376,  0.78010376,  0.78010376,  0.78010376,\n",
-      "        0.77992173,  0.77992173,  0.77764631,  0.77764631,  0.77764631,\n",
-      "        0.77764631,  0.77764631,  0.77764631,  0.77764631,  0.77837444,\n",
-      "        0.77828343]), 'split3_test_Accuracy': array([ 0.77325687,  0.78108502,  0.77780812,  0.77817222,  0.77753504,\n",
-      "        0.77853632,  0.7762607 ,  0.7762607 ,  0.7762607 ,  0.7762607 ,\n",
-      "        0.7762607 ,  0.7762607 ,  0.7762607 ,  0.7762607 ,  0.7762607 ,\n",
-      "        0.7762607 ,  0.7762607 ,  0.77635172,  0.77671582,  0.77180047,\n",
-      "        0.77180047]), 'split4_test_Accuracy': array([ 0.77988166,  0.78334092,  0.78051889,  0.78006372,  0.78024579,\n",
-      "        0.78170232,  0.78106509,  0.77924442,  0.77924442,  0.77924442,\n",
-      "        0.77924442,  0.77924442,  0.77924442,  0.77979062,  0.77979062,\n",
-      "        0.77979062,  0.77742376,  0.77742376,  0.77742376,  0.77933546,\n",
-      "        0.77687756]), 'mean_test_Accuracy': array([ 0.77384767,  0.78009175,  0.77830773,  0.77963664,  0.77929076,\n",
-      "        0.78027379,  0.77960023,  0.77921794,  0.77943639,  0.77883565,\n",
-      "        0.778599  ,  0.77881745,  0.77847156,  0.77854438,  0.77827132,\n",
-      "        0.77825311,  0.7777616 ,  0.77727008,  0.7773429 ,  0.77714265,\n",
-      "        0.77657832]), 'std_test_Accuracy': array([ 0.00314479,  0.00234041,  0.00121028,  0.00085851,  0.00128846,\n",
-      "        0.00125891,  0.00174946,  0.00160112,  0.00168619,  0.00140492,\n",
-      "        0.00146437,  0.00137086,  0.00138991,  0.0014591 ,  0.00152355,\n",
-      "        0.00149973,  0.00126624,  0.00046915,  0.00032798,  0.00273123,\n",
-      "        0.00244969]), 'rank_test_Accuracy': array([21,  2, 13,  3,  6,  1,  4,  7,  5,  8, 10,  9, 12, 11, 14, 15, 16,\n",
-      "       18, 17, 19, 20], dtype=int32), 'split0_train_Accuracy': array([ 0.79729207,  0.79021504,  0.78493572,  0.78418478,  0.78145409,\n",
-      "        0.78138582,  0.78074866,  0.77997497,  0.77977017,  0.77956537,\n",
-      "        0.77956537,  0.77956537,  0.77940608,  0.77940608,  0.77940608,\n",
-      "        0.77940608,  0.77911025,  0.7769257 ,  0.7769257 ,  0.7769257 ,\n",
-      "        0.7769257 ]), 'split1_train_Accuracy': array([ 0.79972693,  0.79010126,  0.78605075,  0.78413926,  0.7828877 ,\n",
-      "        0.78281943,  0.78281943,  0.78270565,  0.78243259,  0.78104449,\n",
-      "        0.77954261,  0.78040733,  0.77999772,  0.77961088,  0.77865514,\n",
-      "        0.77865514,  0.77865514,  0.77865514,  0.77865514,  0.7797019 ,\n",
-      "        0.77958812]), 'split2_train_Accuracy': array([ 0.79726931,  0.78723404,  0.78500398,  0.7819092 ,  0.78090795,\n",
-      "        0.78074866,  0.78047559,  0.78047559,  0.78047559,  0.78047559,\n",
-      "        0.78054386,  0.78054386,  0.77901923,  0.77901923,  0.77901923,\n",
-      "        0.77901923,  0.77901923,  0.77901923,  0.77901923,  0.77890545,\n",
-      "        0.77867789]), 'split3_train_Accuracy': array([ 0.7989123 ,  0.78899103,  0.78532745,  0.78348428,  0.78343877,\n",
-      "        0.78107223,  0.78048059,  0.78048059,  0.78048059,  0.78048059,\n",
-      "        0.78048059,  0.78048059,  0.78048059,  0.78048059,  0.78048059,\n",
-      "        0.78048059,  0.78013926,  0.78009375,  0.78009375,  0.77686251,\n",
-      "        0.77686251]), 'split4_train_Accuracy': array([ 0.79716477,  0.78997429,  0.78508203,  0.78389879,  0.78239698,\n",
-      "        0.7817826 ,  0.78132751,  0.780076  ,  0.780076  ,  0.780076  ,\n",
-      "        0.780076  ,  0.780076  ,  0.78025804,  0.77918857,  0.77918857,\n",
-      "        0.77918857,  0.77834664,  0.77834664,  0.77834664,  0.77855144,\n",
-      "        0.77684484]), 'mean_train_Accuracy': array([ 0.79807308,  0.78930313,  0.78527998,  0.78352326,  0.7822171 ,\n",
-      "        0.78156175,  0.78117036,  0.78074256,  0.78064699,  0.78032841,\n",
-      "        0.78004169,  0.78021463,  0.77983233,  0.77954107,  0.77934992,\n",
-      "        0.77934992,  0.7790541 ,  0.77860809,  0.77860809,  0.7781894 ,\n",
-      "        0.77777981]), 'std_train_Accuracy': array([ 0.00105077,  0.00112228,  0.00040748,  0.00084437,  0.00092418,\n",
-      "        0.00071585,  0.00088096,  0.00100271,  0.00093169,  0.00049062,\n",
-      "        0.00042941,  0.0003625 ,  0.00054252,  0.00051037,  0.00061639,\n",
-      "        0.00061639,  0.0006069 ,  0.00102735,  0.00102735,  0.00112152,\n",
-      "        0.00114207])}\n"
+      "            splitter='best')\n"
      ]
     }
    ],
@@ -4317,7 +4189,7 @@
     "# Setup the hyperparameter grid\n",
     "min_samples_leaf_settings = range(50,1100,50)\n",
     "param_grid = {'min_samples_leaf': min_samples_leaf_settings}\n",
-    "scoring = {'AUC': 'roc_auc', 'Accuracy': make_scorer(accuracy_score)}\n",
+    "scoring = {'AUC': 'precision', 'Accuracy': make_scorer(accuracy_score)}\n",
     "\n",
     "# instantiate model\n",
     "tree = DecisionTreeClassifier()\n",
@@ -4332,22 +4204,21 @@
     "print(\"Tuned Gradient Boosting parameters: {}\".format(tree_cv.best_params_)) \n",
     "print(\"Best ROC AUC is {}\".format(tree_cv.best_score_))\n",
     "print(\"Best estimator is {}\".format(tree_cv.best_estimator_))\n",
-    "print(\"CV result is {}\".format(tree_cv.cv_results_ ))"
+    "#print(\"CV result is {}\".format(tree_cv.cv_results_ ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.6853946980438785\n",
-      "AUC scores computer using 5-fold cross-validation: [ 0.68244657  0.67706209  0.68137584  0.67450427  0.67336496]\n",
-      "CPU times: user 2.73 s, sys: 81.1 ms, total: 2.81 s\n",
-      "Wall time: 3.6 s\n"
+      "AUC: 0.6853573427332575\n",
+      "CPU times: user 463 ms, sys: 23.4 ms, total: 487 ms\n",
+      "Wall time: 511 ms\n"
      ]
     }
    ],
@@ -4356,7 +4227,7 @@
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "tree = DecisionTreeClassifier(min_samples_leaf=250)\n",
+    "tree = DecisionTreeClassifier(min_samples_leaf=300, class_weight={0:0.3,1:0.7})\n",
     "\n",
     "tree.fit(X_train, y_train)\n",
     "\n",
@@ -4367,15 +4238,15 @@
     "print('AUC: {}'.format(roc_auc_score(y_test, y_pred_prob)))\n",
     "\n",
     "# Compute cross-validated AUC scores: cv_auc\n",
-    "cv_auc = cross_val_score(tree, X_train, y_train, cv=5, scoring='roc_auc')\n",
+    "#cv_auc = cross_val_score(tree, X_train, y_train, cv=5, scoring='roc_auc')\n",
     "\n",
     "# print list of AUC scores\n",
-    "print('AUC scores computer using 5-fold cross-validation: {}'.format(cv_auc))"
+    "#print('AUC scores computer using 5-fold cross-validation: {}'.format(cv_auc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -4405,7 +4276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -4413,8 +4284,8 @@
      "output_type": "stream",
      "text": [
       "Confusion matrix:\n",
-      "[[18013   277]\n",
-      " [ 4863   390]]\n"
+      "[[14632  3658]\n",
+      " [ 2907  2346]]\n"
      ]
     }
    ],
@@ -4438,7 +4309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -4447,8 +4318,8 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "  Not Delay       0.78      0.77      0.78     18290\n",
-      "      Delay       0.22      0.22      0.22      5253\n",
+      "  Not Delay       0.78      0.78      0.78     18290\n",
+      "      Delay       0.23      0.23      0.23      5253\n",
       "\n",
       "avg / total       0.65      0.65      0.65     23543\n",
       "\n"
@@ -4474,8 +4345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4483,10 +4356,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "  Not Delay       0.79      0.98      0.88     18290\n",
-      "      Delay       0.58      0.07      0.13      5253\n",
+      "  Not Delay       0.83      0.80      0.82     18290\n",
+      "      Delay       0.39      0.45      0.42      5253\n",
       "\n",
-      "avg / total       0.74      0.78      0.71     23543\n",
+      "avg / total       0.74      0.72      0.73     23543\n",
       "\n"
      ]
     }
