--- a/capstone_project1/weather_retrieval.ipynb
+++ b/capstone_project1/weather_retrieval.ipynb
@@ -2705,6 +2705,8 @@
     }
    ],
    "source": [
+    "#Origin script from IEM to download data from their server\n",
+    "\n",
     "\"\"\"\n",
     "Example script that scrapes data from the IEM ASOS download service\n",
     "\"\"\"\n",
