--- a/logistic_regression/Mini_Project_Logistic_Regression.ipynb
+++ b/logistic_regression/Mini_Project_Logistic_Regression.ipynb
@@ -531,6 +531,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We expect the model will be performing differently with different hyperparameters. In order to avoid overfitting and save time manually run through the results with different hyperparameters, the cross-validation and grid search method will be help to identify the better hyperparameters in the space for test dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Black Box Grid Search in `sklearn`"
    ]
   },
@@ -589,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It gives the same C value as chosen manually previously."
+    "It gives the same C value as chosen manually previously. And performs same as the model obtain before."
    ]
   },
   {
